api /bin fix
