# docs/swagger.json
@@ -44,6 +44,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.HttpError"
                         }
+                    },
+                    "404": {
+                        "description": "firmware for given repo and tags not found",
+                        "schema": {
+                            "$ref": "#/definitions/main.HttpError"
+                        }
                     }
                 }
             }
